# agentfence

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: action-selftest.yml  ci.yml  docs.yml  release.yml
docs/: adapters.md  github-action.md  how-it-works.md  index.md  quickstart.md  safe-usage.md  scenarios.md  threat-model.md
docs/adr/: 0001-record-architecture-decisions.md  0002-deterministic-policy-evaluation.md  0003-docker-sandbox-isolation.md  index.md
examples/: README.md  workflow.yml
examples/demo-weak-config/.claude/: settings.json
src/agentfence/: __init__.py  cli.py  live_spec.py  permissions.py
src/agentfence/adapters/: __init__.py  base.py  claude_code.py  codex.py  globbing.py  opencode.py
src/agentfence/engine/: __init__.py  deterministic.py  live.py  models.py
src/agentfence/reporters/: __init__.py  cli_table.py  json_report.py  markdown.py  sarif.py
src/agentfence/sandbox/: __init__.py  config.py  docker_runner.py  errors.py
src/agentfence/scenarios/: __init__.py  loader.py  schema.py
src/agentfence/scenarios/catalog/: deny_rule_bypass.yaml  filesystem.yaml  network_egress.yaml  secret_access.yaml  shell_and_substitution.yaml
tests/: test_adapter_claude_code.py  test_adapter_codex.py  test_adapter_opencode.py  test_adapters_base.py  test_catalog.py  test_cli.py  test_cli_run.py  test_engine.py  test_examples.py  test_globbing.py  test_live_engine.py  test_reporters.py  test_sandbox.py
tests/fixtures/claude_code/: hardened.settings.json
tests/fixtures/codex/: hardened.config.toml  loose.config.toml  workspace-write.config.toml
tests/fixtures/opencode/: hardened.opencode.json  loose.opencode.json
