[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentfence"
dynamic = ["version"]
description = "Conformance testing for CLI coding-agent permission boundaries"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Tom Price", email = "tomprice13@pm.me" }]
keywords = [
    "security",
    "coding-agent",
    "permissions",
    "guardrails",
    "conformance",
    "sandbox",
    "sarif",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Live mode and Docker-sandboxed execution pull in the Docker SDK. The
# deterministic core has zero heavy runtime dependencies and never needs this.
sandbox = ["docker>=7.1"]

[project.urls]
Homepage = "https://github.com/Lonkins/agentfence"
Repository = "https://github.com/Lonkins/agentfence"
Documentation = "https://lonkins.github.io/agentfence/"
Issues = "https://github.com/Lonkins/agentfence/issues"

[project.scripts]
agentfence = "agentfence.cli:app"

[tool.hatch.version]
path = "src/agentfence/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentfence"]

[tool.hatch.build.targets.sdist]
include = ["src/agentfence", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "docker>=7.1",
    "pre-commit>=3.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "B008", # typer uses function calls in argument defaults by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# docker-py ships partial stubs; keep --strict everywhere else.
module = ["docker.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon (deselect with -m 'not docker')",
    "live: tests that drive a real agent binary (opt-in, may need credentials)",
]

[tool.coverage.run]
branch = true
source = ["agentfence"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
